# playback

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  package.json  pyproject.toml  vue.config.js
config/: settings.py  urls.py
docker/app/: Dockerfile  initialize.sql  setup-db.sh
