[tool.poetry]
name = "playback"
version = "0.1.0"
description = ""
authors = ["nasum <tomato.wonder.life@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.2"
django = "^2.1"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
